tests/snapshots/run_wpt_conformance__coreml_quantizeLinear_float16_1D_tensor_with_uint8_1D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 1D tensor with uint8 1D zeroPoint, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type quantize: For operator: quantize, when `scale` and `zero_point`(if provided) are vectors, `axis` should be present.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[4];
  }

  consts {
    operand_1: f16[4] @bytes([172, 72, 123, 52, 158, 68, 123, 60]);
    operand_2: u8[4] @bytes([128, 128, 128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
