tests/snapshots/run_wpt_conformance__coreml_quantizeLinear_float16_4D_tensor_broadcasting_scale_and_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 4D tensor broadcasting scale and zeroPoint, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type quantize: parameter scale[0] has invalid rank 4, expected [0, 1].

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1, 1, 2, 1] @bytes([123, 52, 158, 68]);
    operand_2: u8[1, 1, 2, 1] @bytes([128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
